--- a/index.html
+++ b/index.html
@@ -37,6 +37,30 @@
       margin-left: auto;
       margin-right: auto;
     }
+    .nav {
+      background: white;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+    .nav a {
+      text-decoration: none;
+      font-weight: bold;
+      color: var(--text-color);
+      padding: 8px 12px;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
+    }
+    .nav a:hover {
+      background-color: var(--accent);
+      color: white;
+    }
     .catalog {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -128,9 +152,13 @@
     </div>
   </header>
 
-  <div id="content">
+  <nav class="nav" id="navMenu">
+    <!-- Меню категорий подгрузим из JS -->
+  </nav>
+
+  <main>
     <div class="catalog" id="catalog"></div>
-  </div>
+  </main>
 
   <footer>
     © 2025 Karal | Bütün huquqlar qorunur
@@ -143,10 +171,13 @@
 <script>
   const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTV7eBZzgIgpUsrTExL5QYK2Z9Vr5JmWfdG43bMBl74RkB5wK1m2l_I-r8lVYLTE56PDLOOL9tMSzOf/pub?gid=0&single=true&output=tsv";
   const whatsappNumber = "994702920323";
-  const ITEMS_PER_BATCH = 2;
+  const ITEMS_PER_BATCH = 20;
 
   let allItems = [];
   let lastRenderedIndex = 0;
+
+  const navMenu = document.getElementById('navMenu');
+  const catalog = document.getElementById('catalog');
 
   document.getElementById("lastUpdated").textContent = new Date().toLocaleDateString('az-AZ');
 
@@ -161,18 +192,30 @@
           videoUrl: videoUrl?.trim(),
           category: category?.trim()
         };
-      }).slice(-100).reverse(); // берем последние 100 для примера
+      }).slice(-100).reverse(); // берем последние 100 записей
+
+      // Создаем уникальный список категорий
+      const categories = [...new Set(allItems.map(item => item.category))];
+
+      // Заполняем меню категориями
+      categories.forEach(cat => {
+        const a = document.createElement('a');
+        a.href = `#category-${cat.toLowerCase().replace(/\s+/g, '-')}`;
+        a.textContent = cat;
+        navMenu.appendChild(a);
+      });
+
       renderNextBatch();
       setupScrollListener();
     });
 
   function renderNextBatch() {
-    const catalog = document.getElementById('catalog');
     const batch = allItems.slice(lastRenderedIndex, lastRenderedIndex + ITEMS_PER_BATCH);
 
     batch.forEach(item => {
       const wrapper = document.createElement('div');
       wrapper.className = 'item';
+      wrapper.id = `category-${item.category.toLowerCase().replace(/\s+/g, '-')}`;
 
       const video = document.createElement('video');
       video.setAttribute('playsinline', '');
@@ -208,13 +251,13 @@
       codeRow.appendChild(codeText);
       codeRow.appendChild(waLink);
 
-      const category = document.createElement('div');
-      category.className = 'category';
-      category.textContent = item.category;
+      const categoryEl = document.createElement('div');
+      categoryEl.className = 'category';
+      categoryEl.textContent = item.category;
 
       wrapper.appendChild(video);
       wrapper.appendChild(codeRow);
-      wrapper.appendChild(category);
+      wrapper.appendChild(categoryEl);
 
       const badge = document.createElement('div');
       badge.className = 'badge-new';
