--- a/uzukler.html
+++ b/uzukler.html
@@ -37,7 +37,7 @@
   </div>
 
 <script>
-  const CATEGORY = "Üzük";  // Текущая категория, меняй для каждой страницы
+  const CATEGORY = "Üzüklər";  // Текущая категория, меняй для каждой страницы
   const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTV7eBZzgIgpUsrTExL5QYK2Z9Vr5JmWfdG43bMBl74RkB5wK1m2l_I-r8lVYLTE56PDLOOL9tMSzOf/pub?gid=0&single=true&output=tsv";
   const whatsappNumber = "994702920323";
 
