--- a/uzukler.html
+++ b/uzukler.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Üzüklər - Kataloq</title>
+  <title>Üzüklər - Kataloq | Islimi Jewelry</title>
   <style>
     :root {
       --bg: #f4f4f4;
@@ -38,25 +38,38 @@
       margin-left: auto;
       margin-right: auto;
     }
-    .nav {
-      background: white;
-      padding: 10px 20px;
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      margin-bottom: 20px;
-    }
-    .nav a {
-      text-decoration: none;
-      font-weight: bold;
-      color: var(--text-color);
-      font-size: 16px;
-    }
-    .nav a:hover {
-      color: var(--accent);
-      text-decoration: underline;
-    }
+.nav {
+  background: white;
+  padding: 12px 30px;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+  border-radius: 8px;
+  margin-bottom: 30px;
+  font-weight: 600;
+  font-size: 17px;
+  user-select: none;
+}
+
+.nav a {
+  text-decoration: none;
+  color: var(--text-color);
+  padding: 8px 15px;
+  border-radius: 6px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.nav a:hover {
+  color: var(--accent);
+  background-color: #f9f5d7;
+}
+
+.nav a.active {
+  color: white;
+  background-color: var(--accent);
+  box-shadow: 0 0 10px var(--accent);
+}
     .catalog {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -143,7 +156,7 @@
 </head>
 <body>
   <header>
-    <img src="https://karal.az/islimilogo2.png" alt="Karal Logo" class="logo" />
+    <img src="https://karal.az/islimilogo2.png" alt="Islimi" class="logo" />
     <div class="info-glass">
       <p>Üzüklər Kataloqu</p>
       <p>Yeniləndi: <span id="lastUpdated"></span></p>
@@ -162,7 +175,7 @@
   </main>
 
   <footer>
-    © 2025 Karal | Bütün huquqlar qorunur
+    © 2025 Islimi Jewelry | Bütün huquqlar qorunur
   </footer>
 
   <div class="modal" id="videoModal" onclick="this.classList.remove('active')">
@@ -274,6 +287,19 @@
       });
     }, { once: true });
   }
+
+  // Подсвечиваем активный пункт меню, основываясь на URL
+const navLinks = document.querySelectorAll('.nav a');
+const currentPath = window.location.pathname.toLowerCase();
+
+navLinks.forEach(link => {
+  // Если путь ссылки совпадает с текущим URL, ставим класс active
+  if (currentPath.includes(link.getAttribute('href').toLowerCase())) {
+    link.classList.add('active');
+  }
+});
 </script>
+
+  
 </body>
 </html>
