--- a/uzukler.html
+++ b/uzukler.html
@@ -49,14 +49,17 @@
   user-select: none;
 
   display: flex;
-  gap: 40px;
-  overflow-x: auto;       /* Включаем горизонтальный скролл */
+  justify-content: center; /* Центрируем меню */
+  gap: 30px;
+  
+  overflow-x: auto;        /* Горизонтальный скролл */
   -webkit-overflow-scrolling: touch; /* Плавный скролл на iOS */
-  scrollbar-width: thin;   /* Тонкий скролл в Firefox */
+  scrollbar-width: thin;    /* Тонкий скролл в Firefox */
+  scrollbar-color: var(--accent) transparent;
 }
 
 .nav::-webkit-scrollbar {
-  height: 6px;             /* Высота горизонтального скролла */
+  height: 6px;
 }
 
 .nav::-webkit-scrollbar-thumb {
@@ -65,13 +68,14 @@
 }
 
 .nav a {
-  flex: 0 0 auto;         /* Чтобы элементы не сжимались и не переносились */
+  flex: 0 0 auto;          /* Чтобы пункты не сжимались и не переносились */
   text-decoration: none;
   color: var(--text-color);
-  padding: 8px 15px;
+  padding: 8px 16px;
   border-radius: 6px;
   transition: background-color 0.3s ease, color 0.3s ease;
   white-space: nowrap;
+  text-align: center;
 }
 
 .nav a:hover {
@@ -85,11 +89,13 @@
   box-shadow: 0 0 10px var(--accent);
 }
 
-/* Убираем переносы и скролл на больших экранах */
+/* На десктопах убираем скролл и выравниваем меню по центру */
 @media (min-width: 601px) {
   .nav {
     overflow-x: visible;
+    justify-content: center;
   }
+}
     .catalog {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
