--- a/uzukler.html
+++ b/uzukler.html
@@ -40,41 +40,29 @@
     }
 .nav {
   background: white;
-  padding: 12px 20px;
+  padding: 8px 10px;
   box-shadow: 0 3px 8px rgba(0,0,0,0.1);
   border-radius: 8px;
   margin-bottom: 30px;
   font-weight: 600;
-  font-size: 17px;
+  font-size: 14px;
   user-select: none;
 
   display: flex;
-  justify-content: center; /* Центрируем меню */
-  gap: 30px;
-  
-  overflow-x: auto;        /* Горизонтальный скролл */
-  -webkit-overflow-scrolling: touch; /* Плавный скролл на iOS */
-  scrollbar-width: thin;    /* Тонкий скролл в Firefox */
-  scrollbar-color: var(--accent) transparent;
-}
-
-.nav::-webkit-scrollbar {
-  height: 6px;
-}
-
-.nav::-webkit-scrollbar-thumb {
-  background: var(--accent);
-  border-radius: 3px;
+  justify-content: center;
+  gap: 15px;
+  flex-wrap: nowrap; /* Запрет переноса */
+  overflow-x: hidden; /* Скрываем скролл */
 }
 
 .nav a {
-  flex: 0 0 auto;          /* Чтобы пункты не сжимались и не переносились */
+  flex: 0 0 auto;
   text-decoration: none;
   color: var(--text-color);
-  padding: 8px 16px;
+  padding: 6px 10px;
   border-radius: 6px;
-  transition: background-color 0.3s ease, color 0.3s ease;
   white-space: nowrap;
+  transition: background-color 0.3s ease, color 0.3s ease;
   text-align: center;
 }
 
@@ -89,11 +77,16 @@
   box-shadow: 0 0 10px var(--accent);
 }
 
-/* На десктопах убираем скролл и выравниваем меню по центру */
 @media (min-width: 601px) {
   .nav {
+    font-size: 17px;
+    padding: 12px 20px;
+    gap: 30px;
     overflow-x: visible;
-    justify-content: center;
+  }
+
+  .nav a {
+    padding: 8px 16px;
   }
 }
     .catalog {
