--- a/uzukler.html
+++ b/uzukler.html
@@ -183,10 +183,11 @@
   </header>
 
   <nav class="nav" id="navMenu">
-    <a href="index.html">Ana səhifə</a>
+    <a href="index.html">Yeni</a>
     <a href="uzukler.html">Üzüklər</a>
+    <a href="qolbaq.html">Sırgalar</a>
     <a href="qolbaq.html">Qolbaqlar</a>
-    <a href="boyunbag.html">Boyunbağlar</a>
+    <a href="boyunbag.html">Boyunbağılar</a>
   </nav>
 
   <main>
