--- a/uzukler.html
+++ b/uzukler.html
@@ -38,57 +38,95 @@
       margin-left: auto;
       margin-right: auto;
     }
-.nav {
-  background: white;
-  padding: 8px 10px;
-  box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-  border-radius: 8px;
-  margin-bottom: 30px;
-  font-weight: 600;
-  font-size: 14px;
-  user-select: none;
-
-  display: flex;
-  justify-content: center;
-  gap: 15px;
-  flex-wrap: nowrap; /* Запрет переноса */
-  overflow-x: hidden; /* Скрываем скролл */
-}
-
-.nav a {
-  flex: 0 0 auto;
-  text-decoration: none;
-  color: var(--text-color);
-  padding: 6px 10px;
-  border-radius: 6px;
-  white-space: nowrap;
-  transition: background-color 0.3s ease, color 0.3s ease;
-  text-align: center;
-}
-
-.nav a:hover {
-  color: var(--accent);
-  background-color: #f9f5d7;
-}
-
-.nav a.active {
-  color: white;
-  background-color: var(--accent);
-  box-shadow: 0 0 10px var(--accent);
-}
-
-@media (min-width: 601px) {
-  .nav {
-    font-size: 17px;
+ .nav {
+    background: white;
     padding: 12px 20px;
+    box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+    border-radius: 8px;
+    margin-bottom: 30px;
+    font-weight: 600;
+    font-size: 17px;
+    user-select: none;
+
+    display: flex;
+    justify-content: center;
     gap: 30px;
-    overflow-x: visible;
   }
 
   .nav a {
+    text-decoration: none;
+    color: var(--text-color);
     padding: 8px 16px;
+    border-radius: 6px;
+    white-space: nowrap;
+    transition: background-color 0.3s ease, color 0.3s ease;
   }
-}
+
+  .nav a:hover {
+    color: var(--accent);
+    background-color: #f9f5d7;
+  }
+
+  .nav a.active {
+    color: white;
+    background-color: var(--accent);
+    box-shadow: 0 0 10px var(--accent);
+  }
+
+  /* Бургер кнопка скрыта на десктопе */
+  .burger {
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 25px;
+    height: 25px;
+  }
+
+  .burger div {
+    width: 25px;
+    height: 3px;
+    background: var(--text-color);
+    border-radius: 3px;
+    transition: all 0.3s linear;
+  }
+
+  /* Мобильный режим */
+  @media (max-width: 600px) {
+    .nav {
+      justify-content: flex-end;
+      position: relative;
+    }
+
+    .nav a {
+      display: none; /* Скрываем пункты меню */
+      position: absolute;
+      top: 50px;
+      right: 20px;
+      background: white;
+      flex-direction: column;
+      width: 150px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+      border-radius: 8px;
+      padding: 10px 0;
+      z-index: 100;
+    }
+
+    .nav a.show {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      padding: 10px 15px;
+      color: var(--text-color);
+      font-weight: 600;
+      font-size: 16px;
+      white-space: normal;
+    }
+
+    .burger {
+      display: flex;
+    }
+  }
     .catalog {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -182,13 +220,36 @@
     </div>
   </header>
 
-  <nav class="nav" id="navMenu">
-    <a href="index.html">Yeni</a>
-    <a href="uzukler.html">Üzüklər</a>
-    <a href="qolbaq.html">Sırgalar</a>
-    <a href="qolbaq.html">Qolbaqlar</a>
-    <a href="boyunbag.html">Boyunbağılar</a>
-  </nav>
+<nav class="nav" id="navMenu">
+  <a href="index.html">Ana səhifə</a>
+  <a href="uzukler.html">Üzüklər</a>
+  <a href="qolbaq.html">Qolbaqlar</a>
+  <a href="boyunbag.html">Boyunbağlar</a>
+  <div class="burger" id="burgerBtn" aria-label="Toggle menu" role="button" tabindex="0">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+</nav>
+
+<script>
+  const burger = document.getElementById('burgerBtn');
+  const navLinks = document.querySelectorAll('.nav a');
+
+  burger.addEventListener('click', () => {
+    navLinks.forEach(link => {
+      link.classList.toggle('show');
+    });
+  });
+
+  // Чтобы можно было открыть меню кнопкой Enter/Space для доступности
+  burger.addEventListener('keydown', e => {
+    if(e.key === 'Enter' || e.key === ' ') {
+      e.preventDefault();
+      burger.click();
+    }
+  });
+</script>
 
   <main>
     <div class="catalog" id="catalog"></div>
