--- a/uzukler.html
+++ b/uzukler.html
@@ -38,95 +38,64 @@
       margin-left: auto;
       margin-right: auto;
     }
- .nav {
-    background: white;
-    padding: 12px 20px;
-    box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-    border-radius: 8px;
-    margin-bottom: 30px;
-    font-weight: 600;
-    font-size: 17px;
-    user-select: none;
+.nav {
+  background: white;
+  padding: 12px 20px;
+  box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+  border-radius: 8px;
+  margin-bottom: 30px;
+  font-weight: 600;
+  font-size: 17px;
+  user-select: none;
 
-    display: flex;
+  display: flex;
+  justify-content: center; /* Центрируем меню */
+  gap: 30px;
+  
+  overflow-x: auto;        /* Горизонтальный скролл */
+  -webkit-overflow-scrolling: touch; /* Плавный скролл на iOS */
+  scrollbar-width: thin;    /* Тонкий скролл в Firefox */
+  scrollbar-color: var(--accent) transparent;
+}
+
+.nav::-webkit-scrollbar {
+  height: 6px;
+}
+
+.nav::-webkit-scrollbar-thumb {
+  background: var(--accent);
+  border-radius: 3px;
+}
+
+.nav a {
+  flex: 0 0 auto;          /* Чтобы пункты не сжимались и не переносились */
+  text-decoration: none;
+  color: var(--text-color);
+  padding: 8px 16px;
+  border-radius: 6px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  white-space: nowrap;
+  text-align: center;
+}
+
+.nav a:hover {
+  color: var(--accent);
+  background-color: #f9f5d7;
+}
+
+.nav a.active {
+  color: white;
+  background-color: var(--accent);
+  box-shadow: 0 0 10px var(--accent);
+}
+
+/* На десктопах убираем скролл и выравниваем меню по центру */
+@media (min-width: 601px) {
+  .nav {
+    overflow-x: visible;
     justify-content: center;
-    gap: 30px;
   }
-
-  .nav a {
-    text-decoration: none;
-    color: var(--text-color);
-    padding: 8px 16px;
-    border-radius: 6px;
-    white-space: nowrap;
-    transition: background-color 0.3s ease, color 0.3s ease;
-  }
-
-  .nav a:hover {
-    color: var(--accent);
-    background-color: #f9f5d7;
-  }
-
-  .nav a.active {
-    color: white;
-    background-color: var(--accent);
-    box-shadow: 0 0 10px var(--accent);
-  }
-
-  /* Бургер кнопка скрыта на десктопе */
-  .burger {
-    display: none;
-    cursor: pointer;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 25px;
-    height: 25px;
-  }
-
-  .burger div {
-    width: 25px;
-    height: 3px;
-    background: var(--text-color);
-    border-radius: 3px;
-    transition: all 0.3s linear;
-  }
-
-  /* Мобильный режим */
-  @media (max-width: 600px) {
-    .nav {
-      justify-content: flex-end;
-      position: relative;
-    }
-
-    .nav a {
-      display: none; /* Скрываем пункты меню */
-      position: absolute;
-      top: 50px;
-      right: 20px;
-      background: white;
-      flex-direction: column;
-      width: 150px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-      border-radius: 8px;
-      padding: 10px 0;
-      z-index: 100;
-    }
-
-    .nav a.show {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      padding: 10px 15px;
-      color: var(--text-color);
-      font-weight: 600;
-      font-size: 16px;
-      white-space: normal;
-    }
-
-    .burger {
-      display: flex;
-    }
-  }
+}
     .catalog {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -220,36 +189,12 @@
     </div>
   </header>
 
-<nav class="nav" id="navMenu">
-  <a href="index.html">Ana səhifə</a>
-  <a href="uzukler.html">Üzüklər</a>
-  <a href="qolbaq.html">Qolbaqlar</a>
-  <a href="boyunbag.html">Boyunbağlar</a>
-  <div class="burger" id="burgerBtn" aria-label="Toggle menu" role="button" tabindex="0">
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
-</nav>
-
-<script>
-  const burger = document.getElementById('burgerBtn');
-  const navLinks = document.querySelectorAll('.nav a');
-
-  burger.addEventListener('click', () => {
-    navLinks.forEach(link => {
-      link.classList.toggle('show');
-    });
-  });
-
-  // Чтобы можно было открыть меню кнопкой Enter/Space для доступности
-  burger.addEventListener('keydown', e => {
-    if(e.key === 'Enter' || e.key === ' ') {
-      e.preventDefault();
-      burger.click();
-    }
-  });
-</script>
+  <nav class="nav" id="navMenu">
+    <a href="index.html">Ana səhifə</a>
+    <a href="uzukler.html">Üzüklər</a>
+    <a href="qolbaq.html">Qolbaqlar</a>
+    <a href="boyunbag.html">Boyunbağlar</a>
+  </nav>
 
   <main>
     <div class="catalog" id="catalog"></div>
